implemented LocaleHelper for language support

--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">MarketSim</string>
 
     <string-array name="langSpinner">
-        <item>🇺🇸 english</item>
-        <item>🇹🇷 turkish</item>
+        <item>🇺🇸 ingilizce</item>
+        <item>🇹🇷 türkçe</item>
     </string-array>
 
 </resources>
