--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -6,4 +6,8 @@
         <item>🇹🇷 türkçe</item>
     </string-array>
 
+    <string name="profileButton">Profile Git</string>
+    <string name="cartButton">Sepete Git</string>
+    <string name="search">Ara</string>
+    <string name="productName">Ürün İsmi</string>
 </resources>
