updated project version

--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -10,4 +10,6 @@
     <string name="cartButton">Sepete Git</string>
     <string name="search">Ara</string>
     <string name="productName">Ürün İsmi</string>
+    <string name="addCartBtn">Sepete Ekle</string>
+
 </resources>
