--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="cartButton">Go to Cart</string>
     <string name="search">Search</string>
     <string name="productName">Product Name</string>
+    <string name="addCartBtn">Add to Cart</string>
 
 </resources>
