--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -13,7 +13,10 @@
     <string name="addCartBtn">Sepete Ekle</string>
     <string name="cart">Sepet</string>
     <string name="orderTotal">Sepet Tutarı: </string>
+    <string name="orderDiscounted">İndirimli Tutar: </string>
     <string name="useCoupon">Kupon Kullan</string>
+    <string name="chooseCoupon">Kupon Seçiniz</string>
+    <string name="ok">SEÇ</string>
 
     <string name="un">Kullanıcı Adı</string>
     <string name="fn">İsim</string>
