--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,15 @@
     <string name="changePhoto">Change Photo</string>
     <string name="coupon">Coupons</string>
 
+    <string name="tap_to_start">Tap to Start</string>
+    <string name="game_over">Game Over</string>
+    <string name="tap_to_restart">Tap to Restart</string>
+    <string name="paused">PAUSED</string>
+    <string name="tap_to_resume">Tap again to resume</string>
+    <string name="score">Score: </string>
+    <string name="gameDialogTitle">Congrats !</string>
+    <string name="gameDialogText">You won a coupon !</string>
+    <string name="gameDialogOK">OK</string>
+
+
 </resources>
